--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <header>
-      <a href="/">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <nav>
         <ul>
           <li><a href="/studio">Studio</a></li>
@@ -32,6 +32,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -139,7 +140,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
